tabellen met dieren

--- a/dieren.html
+++ b/dieren.html
@@ -3,11 +3,74 @@
 	<head>
 		<a href="index.html">
 			<img src="logo.gif" alt="logo">
-		</a>	
+		</a>
 		<title>Aanwezige dieren</title>
 	</head>
 
 	<body>
-
+		<h1>Een overzicht van aanwezige dieren</h1>
+		Klik <a href="#honden">hier</a> om informatie over honden te zien.
+		<br>
+		Klik <a href="#katten">hier</a> om informatie over katten te zien.
+		
+		<a name="honden">
+			<h2>Honden</h2>
+			In ons asiel zijn een aantal honden aanwezig, in onderstaande tabel staan ze weergegeven.<br>
+			Honden zijn dieren die veel aandacht nodig hebben.<br>
+			Wil je er een adopteren neem dan contact op!
+			<p>
+			<table>
+				<thead>
+					<tr>
+						<th>Naam</th><th>Leeftijd</th><th>Reg. Nr.</th><th>Gereserveerd</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><b>Kat1</b></td>
+						<td>9</td>
+						<td>1</td>
+						<td>nee</td>
+					</tr>
+					<tr>
+						<td><b>Kat2</b></td>
+						<td>2</td>
+						<td>2</td>
+						<td>nee</td>
+					</tr>	
+				</tbody>
+			</table>
+		</a>
+		<p>		
+		<a name="katten">
+			<h2>Katten</h2>
+			In ons asiel zijn een aantal katten aanwezig, in onderstaande tabel staan ze weergegeven.<br>
+			Katten kunnen goed leven in een kleine leefomgeving.<br>
+			Wil je er een adopteren neem dan contact op!
+			<p>
+			<table>
+				<thead>
+					<tr>
+						<th>Naam</th><th>Leeftijd</th><th>Reg. Nr.</th><th>Gereserveerd</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><b>Hond1</b></td>
+						<td>5</td>
+						<td>3</td>
+						<td>nee</td>
+					</tr>
+					<tr>
+						<td><b>Hond2</b></td>
+						<td>7</td>
+						<td>4</td>
+						<td>nee</td>
+					</tr>	
+				</tbody>
+			</table>
+		</a>	
+		<p>
+		Toon <a href="dieren.html">aanwezige dieren</a>
 	</body>
 </html>
