--- a/dieren.html
+++ b/dieren.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="nl">
 	<head>
+		<link rel="stylesheet" href="style.css"/>
 		<a href="index.html">
 			<img src="logo.gif" alt="logo">
 		</a>
-		<title>Aanwezige dieren</title>
+		<title class="title">Aanwezige dieren</title>
 	</head>
 
 	<body>
@@ -15,10 +16,12 @@
 		
 		<a name="honden">
 			<h2>Honden</h2>
+		</a>
+			<p>
 			In ons asiel zijn een aantal honden aanwezig, in onderstaande tabel staan ze weergegeven.<br>
 			Honden zijn dieren die veel aandacht nodig hebben.<br>
 			Wil je er een adopteren neem dan contact op!
-			<p>
+			</p>
 			<table>
 				<thead>
 					<tr>
@@ -41,14 +44,15 @@
 				</tbody>
 			</table>
 			<h4>Als je honden wil toevoegen vul dan het formulier onder aan de pagina in</h4>
-		</a>
 		<p>		
 		<a name="katten">
 			<h2>Katten</h2>
+		</a>
+			<p>
 			In ons asiel zijn een aantal katten aanwezig, in onderstaande tabel staan ze weergegeven.<br>
 			Katten kunnen goed leven in een kleine leefomgeving.<br>
 			Wil je er een adopteren neem dan contact op!
-			<p>
+			</p>
 			<table>
 				<thead>
 					<tr>
@@ -71,7 +75,6 @@
 				</tbody>
 			</table>
 			<h4>Als je katten wil toevoegen vul dan het formulier onder aan de pagina in</h4>
-		</a>	
 		<p>
 		
 		<form>
@@ -92,7 +95,7 @@
 			<input type="radio" name="dier" value="kat">
 			<label for="kat">Kat</label>
 			<br>
-			<input type="submit" value="Toevoegen" />
+			<input type="submit" value="Toevoegen" class = "button"/>
 		</form>
 	</body>
 </html>
