--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="nl">
 	<head>
+		<link rel="stylesheet" href="style.css"/>
 		<a href="index.html">
 			<img src="logo.gif" alt="logo">
 		</a>
-		<title>Dierenasiel</title>
+			<title class="title">Dierenasiel</title>
 	</head>
 
 	<body>
 		<h1>Dieren, daar doen we het voor!</h1>
+		<p>
 		Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. <br>
 		Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.<br> 
 		Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim.<br> 
 		Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
+		</p>
 		<p>
 		In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium.<br> 
 		Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.<br> 
@@ -21,7 +24,7 @@
 		Curabitur ullamcorper ultricies nisi. Nam eget dui.
 		<h2>Aanwezige dieren</h2>
 		Deze dieren zijn er in ons asiel:
-		<p>
+		</p>
 		<ul>
 			<li>honden</li>
 			<li>katten</li>
