--- a/dieren.html
+++ b/dieren.html
@@ -2,8 +2,9 @@
 <html lang="nl">
 	<head>
 		<link rel="stylesheet" href="style.css"/>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 		<a href="index.html">
-			<img src="logo.gif" alt="logo">
+			<img src="Images/logo.gif" alt="logo">
 		</a>
 		<title class="title">Aanwezige dieren</title>
 	</head>
@@ -99,3 +100,4 @@
 		</form>
 	</body>
 </html>
+$("h1").addClass("title");
