--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<link rel="stylesheet" href="style.css"/>
 		<a href="index.html">
-			<img src="logo.gif" alt="logo">
+			<img src="Images/logo.gif" alt="logo">
 		</a>
 			<title class="title">Dierenasiel</title>
 	</head>
